k8s/kustomize/work/overlays/test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
  labels:
    homework: frontapp
  namespace: hw3-test
spec:
  rules:
  - host: grafana.cubix.localhost
  - http: 
      paths:
      - path: /frontapp
        pathType: Prefix
        backend:
          service: 
            name: frontapp
            port:
              number: 8080
